--- a/index.html
+++ b/index.html
@@ -88,6 +88,25 @@
 
                 </div>
             </section>
+            <section class="history">
+                <div class="container">
+                    <div class="history__img-wrapper">
+                        <img src="./images/room.jpg" alt="" class="history__img">
+                    </div>
+                    <div class="history__text">
+                        <h2 class="title history__title">
+                            We make <br/> <span class="text-gradient">delicious</span>
+                        </h2>
+                        <p class="history__desc">
+                            Only in 2021 we have made more then 100,000 orders for you,
+                            your loved ones, all of you, and in 2022 we are ready to
+                            destroy the market
+                        </p>
+                        <img src="./images/kitchen.jpg" alt="" class="history__pic">
+
+                    </div>
+                </div>
+            </section>
         </main>
     </body>
     </html>
